# api-monitoring-backend

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_organization.py
apis/: models.py  serializers.py  urls.py  views.py
apis/migrations/: 0001_initial.py
common/: models.py
config/: celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py  local.py  production.py
monitoring/: models.py  serializers.py  tasks.py  urls.py  views.py
monitoring/migrations/: 0001_initial.py
organizations/: middleware.py  models.py  serializers.py  services.py  urls.py  views.py
organizations/migrations/: 0001_initial.py  0002_alter_organization_options_organizationmember.py
